--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Welcome to my website that show some of my digital creations.">
     <title>First Website</title>
 
 </head>
@@ -14,6 +15,6 @@
 
 <h3>Website</h3>
 
-<p><a href="https://www.imdb.com/title/tt10234450/">Don't click</a></p>
+<p><a href="exercises/page1.html">Another Page</a></p>
 </body>
 </html>
