--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="exercises/assets/css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Welcome to my website that show some of my digital creations.">
-    <title>First Website</title>
+    <meta name="description" content="Welcome to Victor Agahi website that show some of my digital creations">
+    <title>Victor Agahi | Web Designer</title>
 
 </head>
 <body>
+
 <h1>Welcome</h1>
 <h2>Victor Agahi</h2>
+<section class="sexe1"><p>W</p></section>
+<section class="sexe2"><p>We</p></section>
+<section class="sexe3"><p>Web</p></section>
+<section class="sexe4"><p>Webs</p></section>
+<section class="sexe5"><p>Websi</p></section>
+<section class="sexe6"><p>Websit</p></section>
+<section class="sexe7"><p>Website</p></section>
 
-<h3>Website</h3>
 
 <p><a href="exercises/page1.html">Another Page</a></p>
 </body>
