--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 </head>
 <body>
 
-<h1>Welcome</h1>
-<h2>Victor Agahi</h2>
-<section class="sexe1"><p>W</p></section>
-<section class="sexe2"><p>We</p></section>
-<section class="sexe3"><p>Web</p></section>
-<section class="sexe4"><p>Webs</p></section>
-<section class="sexe5"><p>Websi</p></section>
-<section class="sexe6"><p>Websit</p></section>
-<section class="sexe7"><p>Website</p></section>
-<div class="cont">
-    <button class="btn"><span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62"></button>
+<ul class = "nav-bar">
+    <li class="item-bar"><a class = "text-bar" href="exercises/personal-project/mainpage.html">Personnal Project</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-1.html">A Tale of Two Cities</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-2.html">Purple Rain</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-3.html">Nice Section Heading</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-4.html">Lorem Ipsum Text</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-5.html">Vincent van Gogh</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-6.html">Ireland's Top Five Visitor Attractions</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-7.html">Smooth Smoothies</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-8.html">Digital Product Innovation</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/page-9.html">The Box Model</a></li>
 
+</ul>
 
-</div>
-<p><a href="exercises/page1.html">Another Page</a></p>
-</body>
-</html>
+<h2 class="text-website">VICTOR WEBSITE</h2>
