--- a/exercises/personal-project/page1.html
+++ b/exercises/personal-project/page1.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-<h1>Second Page U know</h1>
+<h1>Page 1 U know</h1>
 
 
-<p><a href="../index.html">back</a></p>
+<p><a href="mainpage.html">back</a></p>
 </body>
 </html>
