--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../../assets/css/perso-project/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,7 +13,7 @@
 <body>
 
 <ul class = "nav-bar">
-    <li class="item-bar"><a class = "text-bar" href="../../index.html">Home</a></li>
+    <li class="item-bar"><a class = "text-bar" href="../../../index.html">Home</a></li>
     <li class="item-bar"><a class = "text-bar" href="../page-1.html">A Tale of Two Cities</a></li>
     <li class="item-bar"><a class = "text-bar" href="../page-2.html">Purple Rain</a></li>
     <li class="item-bar"><a class = "text-bar" href="../page-3.html">Nice Section Heading</a></li>
@@ -31,14 +31,14 @@
 
 
 <div class="center">
-    <div class = "outer circle">
-        <button onclick="window.location.href='page1.html';">Hover</button>
+    <div class = "outer circle" >
+        <button  onclick="window.location.href='page1.html';">Page 1</button>
         <span>
         </span>
         <span>
         </span>
     </div>
-    <div class = "outer circle">
+    <div class = "outer circle"  id="button2">
         <button onclick="window.location.href='page2.html';">Page 2</button>
         <span>
 
@@ -51,7 +51,7 @@
 <div class = "logo">
     <div class ="content">
 
-        <img src="../assets/image/Image.JPG">
+        <img src="../../assets/image/Image.JPG">
 
         <div class="text-logo">
 
@@ -59,6 +59,7 @@
             <div class = "button-logo">
                 <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
     </div>
+    <script src="../../assets/js/script.js"></script>
 </div>
 </body>
 </html>
