--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="exercises/assets/css/styles.css">
+    <link rel="stylesheet" href="exercises/assets/css/perso-project/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -13,16 +13,16 @@
 <body>
 
 <ul class = "nav-bar">
-    <li class="item-bar"><a class = "text-bar" href="exercises/personal-project/mainpage.html">Personnal Project</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-1.html">A Tale of Two Cities</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-2.html">Purple Rain</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-3.html">Nice Section Heading</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-4.html">Lorem Ipsum Text</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-5.html">Vincent van Gogh</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-6.html">Ireland's Top Five Visitor Attractions</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-7.html">Smooth Smoothies</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-8.html">Digital Product Innovation</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/page-9.html">The Box Model</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/personal-project/mainpage.html">Personnal Project</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-1.html">A Tale of Two Cities</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-2.html">Purple Rain</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-3.html">Nice Section Heading</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-4.html">Lorem Ipsum Text</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-5.html">Vincent van Gogh</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-6.html">Ireland's Top Five Visitor Attractions</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-7.html">Smooth Smoothies</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-8.html">Digital Product Innovation</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-9.html">The Box Model</a></li>
 
 </ul>
 
