--- a/exercises/html-pages/page-4.html
+++ b/exercises/html-pages/page-4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorem Ipsum Text</title>
     <meta name="description" content="A basic web page containing some text from A Tale of Two Cities, a novel published in 1859 by English author Charles Dickens.">   
-    <link rel="stylesheet" href="assets/css/style-4.css">
+    <link rel="stylesheet" href="../assets/css/style-4.css">
 </head>
 <body>
 <h1>Lorem Ipsum Text</h1>
