--- a/exercises/html-pages/personal-project/page2.html
+++ b/exercises/html-pages/personal-project/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="../../assets/css/perso-project/styles.css">
     <title>Title</title>
 </head>
 <body>
