--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -30,8 +30,9 @@
 </section>
 
 
-<div class="center">
-    <div class = "outer circle" >
+<div class="center grid-container">
+
+    <div class = "outer circle button1" >
         <button  onclick="window.location.href='page1.html';">Page 1</button>
         <span>
         </span>
@@ -46,20 +47,23 @@
         <span>
         </span>
     </div>
-</div>
+    <div class = "logo">
+        <div class ="content">
 
-<div class = "logo">
-    <div class ="content">
+            <img src="../../assets/image/cafe.jpg" alt="cafe.jpg">
 
-        <img src="../../assets/image/Image.JPG">
+            <div class="text-logo">
 
-        <div class="text-logo">
-
-            <h2>Web Developer<br><span>HTML/CSS Designer</span></h2>
-            <div class = "button-logo">
-                <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
+                <h2>Web Developer<br><span>HTML/CSS Designer</span></h2>
+                <div class = "button-logo">
+                    <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
+        </div>
+        <script src="../../assets/js/script.js"></script>
     </div>
-    <script src="../../assets/js/script.js"></script>
 </div>
+<div><section class="second-page"></section></div>
+<footer ><p class="footer-main">&copy; Victor Production</p></footer>
+
+
 </body>
 </html>
