--- a/index.html
+++ b/index.html
@@ -14,15 +14,8 @@
 
 <ul class = "nav-bar">
     <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/personal-project/mainpage.html">Personnal Project</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-1.html">A Tale of Two Cities</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-2.html">Purple Rain</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-3.html">Nice Section Heading</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-4.html">Lorem Ipsum Text</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-5.html">Vincent van Gogh</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-6.html">Ireland's Top Five Visitor Attractions</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-7.html">Smooth Smoothies</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-8.html">Digital Product Innovation</a></li>
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-9.html">The Box Model</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-0.html">ALL PAGES</a></li>
+
 
 </ul>
 
