--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -14,15 +14,7 @@
 
 <ul class = "nav-bar">
     <li class="item-bar"><a class = "text-bar" href="../../../index.html">Home</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-1.html">A Tale of Two Cities</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-2.html">Purple Rain</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-3.html">Nice Section Heading</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-4.html">Lorem Ipsum Text</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-5.html">Vincent van Gogh</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-6.html">Ireland's Top Five Visitor Attractions</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-7.html">Smooth Smoothies</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-8.html">Digital Product Innovation</a></li>
-    <li class="item-bar"><a class = "text-bar" href="../page-9.html">The Box Model</a></li>
+    <li class="item-bar"><a class = "text-bar" href="../page-0.html">ALL PAGES</a></li>
 </ul>
 
 <section class="main">
