--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -20,40 +20,57 @@
 <section class="main">
     <h1 class="Title">Welcome To my Website</h1>
 </section>
+<div class="space">
 
 
-<div class="center grid-container">
-
-    <div class = "outer circle button1" >
-        <button  onclick="window.location.href='page1.html';">Page 1</button>
-        <span>
-        </span>
-        <span>
-        </span>
+    <div class="main-windows-button">
+        View my work
     </div>
-    <div class = "outer circle"  id="button2">
-        <button onclick="window.location.href='page2.html';">Page 2</button>
-        <span>
 
-        </span>
-        <span>
-        </span>
-    </div>
-    <div class = "logo">
-        <div class ="content">
 
-            <img src="../../assets/image/cafe.jpg" alt="cafe.jpg">
 
-            <div class="text-logo">
-
-                <h2>Web Developer<br><span>HTML/CSS Designer</span></h2>
-                <div class = "button-logo">
-                    <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
-        </div>
-        <script src="../../assets/js/script.js"></script>
-    </div>
 </div>
-<div><section class="second-page"></section></div>
+
+<div>
+    <section class="second-page">
+
+    <div class="center grid-container">
+
+        <div class = "outer circle button1" >
+            <button  onclick="window.location.href='page1.html';">Page 1</button>
+            <span>
+        </span>
+            <span>
+        </span>
+        </div>
+        <div class = "outer circle"  id="button2">
+            <button onclick="window.location.href='page2.html';">Page 2</button>
+            <span>
+
+        </span>
+            <span>
+        </span>
+        </div>
+        <div class = "logo">
+            <div class ="content">
+
+                <img src="../../assets/image/cafe.jpg" alt="cafe.jpg">
+
+                <div class="text-logo">
+
+                    <h2>Web Developer<br><span>HTML/CSS Designer</span></h2>
+                    <div class = "button-logo">
+                        <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
+            </div>
+            <script src="../../assets/js/script.js"></script>
+        </div>
+    </div>
+
+    </section>
+
+
+</div>
+
 <footer ><p class="footer-main">&copy; Victor Production</p></footer>
 
 
