--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Welcome to Victor Agahi website that show some of my digital creations">
     <title>Victor Agahi | Web Designer</title>
-
 </head>
 <body>
 
@@ -22,9 +21,12 @@
 </section>
 <div class="space">
 
-
+    <p>Hi, My Name is Victor
+    </p><p>
+    I'm a Computer Science Student</p>
     <div class="main-windows-button">
-        View my work
+        <a href="#second">
+        View my work ⬇️</a>
     </div>
 
 
@@ -32,11 +34,14 @@
 </div>
 
 <div>
-    <section class="second-page">
+    <section class="second-page" id="second">
 
     <div class="center grid-container">
 
-        <div class = "outer circle button1" >
+
+        <div class = "outer circle button1 reveal-p reveal-p-visible"  >
+
+            <script src="../../assets/js/script.js"></script>
             <button  onclick="window.location.href='page1.html';">Page 1</button>
             <span>
         </span>
@@ -62,9 +67,10 @@
                     <div class = "button-logo">
                         <a href="https://coinmarketcap.com/fr/currencies/ethereum/">Click</a></div></div>
             </div>
-            <script src="../../assets/js/script.js"></script>
         </div>
     </div>
+
+
 
     </section>
 
