--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+
 <ul class = "nav-bar">
     <li class="item-bar"><a class = "text-bar" href="../../../index.html">Home</a></li>
     <li class="item-bar"><a class = "text-bar" href="../page-0.html">ALL PAGES</a></li>
@@ -36,19 +37,25 @@
 <div>
     <section class="second-page" id="second">
 
-    <div class="center grid-container">
+    <div class="center grid-container ">
 
 
-        <div class = "outer circle button1 reveal-p reveal-p-visible"  >
 
-            <script src="../../assets/js/script.js"></script>
+        <div class="text-1 reveal-p reveal-p-visible">
+            <h2>Main idea</h2>
+            <p class="text-1-color-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class = "outer circle button1 reveal-button1 reveal-button1-visible "  >
+
             <button  onclick="window.location.href='page1.html';">Page 1</button>
             <span>
         </span>
             <span>
         </span>
         </div>
-        <div class = "outer circle"  id="button2">
+
+
+        <div class = "outer circle reveal-button1 reveal-button1-visible"  id="button2">
             <button onclick="window.location.href='page2.html';">Page 2</button>
             <span>
 
@@ -56,12 +63,12 @@
             <span>
         </span>
         </div>
-        <div class = "logo">
+        <div class = "logo reveal-p reveal-p-visible">
             <div class ="content">
 
                 <img src="../../assets/image/cafe.jpg" alt="cafe.jpg">
 
-                <div class="text-logo">
+                <div class="text-logo ">
 
                     <h2>Web Developer<br><span>HTML/CSS Designer</span></h2>
                     <div class = "button-logo">
@@ -70,7 +77,7 @@
         </div>
     </div>
 
-
+        <script src="../../assets/js/script.js"></script>
 
     </section>
 
