--- a/exercises/html-pages/page-0.html
+++ b/exercises/html-pages/page-0.html
@@ -323,6 +323,9 @@
     <div onclick="window.location.href='page-8.html';">Page 8</div>
     <div onclick="window.location.href='page-9.html';">Page 9</div>
     <div onclick="window.location.href='page-10.html';">Page 10</div>
+    <div onclick="window.location.href='hero-image.html';">Page 11</div>
+    <div onclick="window.location.href='hero-text.html';">Page 12</div>
+    <div onclick="window.location.href='hero-video.html';">Page 13</div>
     <div onclick="window.location.href='personal-project/mainpage.html';">Personal Project</button></div>
     <div onclick="window.location.href='../../index.html';">BACK</button></div>
 </div>
