--- a/exercises/html-pages/page-0.html
+++ b/exercises/html-pages/page-0.html
@@ -325,7 +325,14 @@
     <div onclick="window.location.href='page-10.html';">Page 10</div>
     <div onclick="window.location.href='hero-image.html';">Page 11</div>
     <div onclick="window.location.href='hero-text.html';">Page 12</div>
-    <div onclick="window.location.href='hero-video.html';">Page 13</div>
+    <div onclick="window.location.href='../../portfolio/project-hero/index-1.html';">Page 13</div>
+    <div onclick="window.location.href='../../portfolio/project-hero/index-2.html';">Page 14</div>
+    <div onclick="window.location.href='../../portfolio/project-hero/index-3.html';">Page 15</div>
+    <div onclick="window.location.href='../../portfolio/project-hero/index-4.html';">Page 16</div>
+    <div onclick="window.location.href='../../portfolio/project-hero/index-5.html';">Page 17</div>
+    <div onclick="window.location.href='../../portfolio/smoothies/index.html';">Page 18</div>
+    <div onclick="window.location.href='../../portfolio/project-multi-column/index.html';">Page 19</div>
+    <div onclick="window.location.href='../../portfolio/crypto-wallet/index.html';">Page 20</div>
     <div onclick="window.location.href='personal-project/mainpage.html';">Personal Project</button></div>
     <div onclick="window.location.href='../../index.html';">BACK</button></div>
 </div>
