--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -17,9 +17,7 @@
     <li class="item-bar"><a class = "text-bar" href="../page-0.html">ALL PAGES</a></li>
 </ul>
 
-<section class="main">
-    <h1 class="Title">Welcome To my Website</h1>
-</section>
+
 <div class="space">
 
     <p>Hi, My Name is Victor
@@ -27,7 +25,7 @@
     I'm a Computer Science Student</p>
     <div class="main-windows-button">
         <a href="#second">
-        View my work ⬇️</a>
+        View my work</a>
     </div>
 
 
@@ -35,7 +33,11 @@
 </div>
 
 <div>
+    
     <section class="second-page" id="second">
+
+
+
 
     <div class="center grid-container ">
 
