--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-CXBXZLJY8V');
     </script>
     <title>Victor Agahi | Web Designer</title>
@@ -26,6 +25,10 @@
     <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-0.html">ALL PAGES</a></li>
 
 
+
 </ul>
 
 <h2 class="text-website">VICTOR WEBSITE</h2>
+
+<h1 class="color-menu"> clique on ALL PAGES</h1>
+</body>
