--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -10,29 +10,32 @@
     <title>Victor Agahi | Web Designer</title>
 </head>
 <body>
-
+<section>
 
 <ul class = "nav-bar">
     <li class="item-bar"><a class = "text-bar" href="../../../index.html">Home</a></li>
     <li class="item-bar"><a class = "text-bar" href="../page-0.html">ALL PAGES</a></li>
 </ul>
 
+    <div class="bg"></div>
+
+    <div class="star-field">
+        <div class="layer"></div>
+        <div class="layer"></div>
+        <div class="layer"></div></div>
 
 <div class="space">
-
     <p>Hi, My Name is Victor
     </p><p>
     I'm a Computer Science Student</p>
     <div class="main-windows-button">
+
         <a href="#second">
         View my work</a>
     </div>
-
-
-
 </div>
+</section>
 
-<div>
     
     <section class="second-page" id="second">
 
@@ -84,9 +87,11 @@
     </section>
 
 
-</div>
+<section>
+    <footer ><p class="footer-main">&copy; Victor Production</p></footer>
+</section>
 
-<footer ><p class="footer-main">&copy; Victor Production</p></footer>
+
 
 
 </body>
