--- a/exercises/html-pages/personal-project/mainpage.html
+++ b/exercises/html-pages/personal-project/mainpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../../assets/css/perso-project/custom.css">
     <link rel="stylesheet" href="../../assets/css/perso-project/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,7 +11,6 @@
     <title>Victor Agahi | Web Designer</title>
 </head>
 <body>
-<section>
 
 <ul class = "nav-bar">
     <li class="item-bar"><a class = "text-bar" href="../../../index.html">Home</a></li>
@@ -34,18 +34,10 @@
         View my work</a>
     </div>
 </div>
-</section>
 
     
-    <section class="second-page" id="second">
-
-
-
-
-    <div class="center grid-container ">
-
-
-
+    <section class="second-page" >
+    <div class="center grid-container" id="second">
         <div class="text-1 reveal-p reveal-p-visible">
             <h2>Main idea</h2>
             <p class="text-1-color-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -86,6 +78,40 @@
 
     </section>
 
+
+
+
+<section class="w-1356px theme-dark section-selector-3">
+
+    <div class="col-1 text-center w-820px"><h2 class="">Different Projects</h2>
+        <h3>Leverage agile frameworks to provide a robust synopsis for high level overviews to foster collaborative thinking.</h3></div>
+
+    <!-- Begin three-column flexbox grid -->
+    <div class="flex-cols-3 cols-padding cols-gap-3 cols-borders-width-4 cols-corners-soft rad-30px cols-background">
+        <div class="col-3">
+            <figure>
+                <img src="../../assets/image/project-smoothie.jpg" alt="Placeholder image">
+            </figure><h3>Smooth Smoothies</h3>
+            <p>Our friendly baristas are waiting to pour your favourite beverage. We use only expertly selected coffee beans and tea leaves.</p>
+        </div>
+
+        <div class="col-3">
+            <figure>
+                <img src="../../assets/image/project-fashion.jpg" alt="Placeholder image">
+            </figure><h3>Snazzy Fashion</h3>
+            <p>Level up your look with our ever-changing selection of on-trend brands. We ship to almost everywhere in the world quickly and reliably.</p>
+        </div>
+
+        <div class="col-3">
+            <figure>
+                <img src="../../assets/image/project-crypto-wallet.jpg" alt="Placeholder image">
+            </figure><h3>Snazzy Crypto Wallet</h3>
+            <p>Supercharge your web design career with the <i>Lunevedy: JavaScript for Beginners</i> training course. All important topics covered.</p>
+        </div>
+
+
+    </div>
+</section>
 
 <section>
     <footer ><p class="footer-main">&copy; Victor Production</p></footer>
