--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/personal-project/mainpage.html">Personnal Project</a></li>
     <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-0.html">ALL PAGES</a></li>
 
-
-
 </ul>
-
+<div class="bg"></div>
+<div class="star-field">
+    <div class="layer"></div>
+    <div class="layer"></div>
+    <div class="layer"></div></div>
 <h2 class="text-website">VICTOR WEBSITE</h2>
 
 <h1 class="color-menu"> clique on ALL PAGES</h1>
