--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
 
 <ul class = "nav-bar">
-    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/personal-project/mainpage.html">Personnal Project</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/personal-project/mainpage.html">Porfolio 1</a></li>
+    <li class="item-bar"><a class = "text-bar" href="exercises/Portfolio%202/index.html">Porfolio 2</a></li>
     <li class="item-bar"><a class = "text-bar" href="exercises/html-pages/page-0.html">ALL PAGES</a></li>
 
 </ul>
