--- a/exercises/Portfolio 2/index.html
+++ b/exercises/Portfolio 2/index.html
@@ -30,10 +30,11 @@
             <p>
             I'm a Computer Science Student</p>
             <div class="main-windows-button">
-                <a href="#second">
+                <a href="#viewmywork">
                     View my work</a>
             </div>
         </div>
+    </section>
 
     <!-- HOME -->
         <nav class="flex overridden-nav">
@@ -46,17 +47,25 @@
             </div>
             <i class="mdi mdi-menu"></i>
         </nav>
+
+    <section class="theme-light section-selector-1 w-820px text-center-desktop text-center-mobile" id="about">
+
+        <div class="col-1 text-center w-820px "><h2 class="heading-underline about-title-animation-reveal about-title-animation">About Me</h2>
+            <h3  id="viewmywork" class="about-text-animation-reveal about-text-animation">I am currently a student at EPITA, a renowned computer science school located in France. My passion lies in becoming a digital engineer, where I can leverage my skills and knowledge to innovate and contribute to the technological advancements shaping our world. Through EPITA's comprehensive curriculum and hands-on approach to learning, I am confident in my ability to achieve my goal and make a meaningful impact in the field of digital engineering.
+            </h3>
+        </div>
+            <figure class="about-img-animation about-img-animation-reveal">
+            <img src="img/tab.png" alt="Placeholder image">
+        </figure>
     </section>
 
 
 
     <!-- section starts here -->
-<div id="maDivSpeciale">
-    <section class="theme-light w-1356px section-selector-1">
-        <div class="col-1 text-center w-820px reveal-button1-visible reveal-button1"><h2 class="heading-underline">About Me</h2>
-        <h3>Im a Dorset Student lol</h3>
-    </div>
+
+    <section class="theme-light w-1356px section-selector-2">
         <!-- Begin three-column flexbox grid -->
+        <div class="col-1 text-center w-820px "><h2 class="heading-underline about-title-animation-reveal about-title-animation">Portfolio</h2>
         <div class="flex-cols-3 cols-gap-2">
             <div class="col-3">
                 <figure>
@@ -84,10 +93,11 @@
                 <a href="#" class="col-3-h3">Learn JavaScript today</a>
                 <p>Supercharge your web design career with the <i>Lunevedy: JavaScript for Beginners</i> training course. All important topics covered.</p>
             </div>
+
         </div>
-        <!-- End three-column flexbox grid -->
     </section>
-    <!-- section ends here -->
+
+
     </div>
 </div>
 </body>
