--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="intro">
         <div class="hello">Hi,</div>
         <h1 id="pres"></h1>
-        <div class="who-creates">And an Epita Student</div>
+        <div class="who-creates">in Epita</div>
     </div>
     <canvas class="background"></canvas>
 
@@ -91,17 +91,17 @@
                     <strong>
                         <i>Passionate Developer</i>
                     </strong>
-                     you know
+                      since my 15 years old
                     <br>
-                    currently
+                    currently a
                     <i>
                         <strong>Dorset Student</strong>
                     </i>
                     <br>
-                    I work efficiently thanks to the Dorset Teacher
+                    I thoroughly enjoy working across
                     <br>
-                    I also develop in
-                    <strong>Ocaml</strong>, allowing me to do the afit
+                    the entire spectrum of
+                    <strong>computer science</strong>
                     <br>
                     <br>
                     I've done quite a few cool projects like
